--- a/src/style.css
+++ b/src/style.css
@@ -18,10 +18,10 @@
 	color: #646cff;
 	text-decoration: inherit;
   }
+  
   a:hover {
 	color: #535bf2;
   }
-  
   body {
 	margin: 0;
 	display: flex;
@@ -29,7 +29,7 @@
 	min-width: 320px;
 	min-height: 100vh;
   }
-  
+ 
   h1 {
 	font-size: 3.2em;
 	line-height: 1.1;
@@ -46,9 +46,11 @@
 	cursor: pointer;
 	transition: border-color 0.25s;
   }
+  
   button:hover {
 	border-color: #646cff;
   }
+  
   button:focus,
   button:focus-visible {
 	outline: 4px auto -webkit-focus-ring-color;
@@ -65,19 +67,21 @@
 	text-align: center;
   }
   
+  /* Light mode overrides */
   @media (prefers-color-scheme: light) {
 	:root {
 	  color: #213547;
 	  background-color: #ffffff;
 	}
+  
 	a:hover {
 	  color: #747bff;
 	}
+  
 	button {
 	  background-color: #f9f9f9;
 	}
-}
-
+  }
   :root {
 	--primary: #EA40A4;
 	--business: #3A82EE;
@@ -119,31 +123,31 @@ body {
 }
  
  
-section {
+
+  /* Section Styles */
+  section {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 	padding-left: 1.5rem;
-	padding-right: 1.5em;
-}
- 
- 
-h3 {
+	padding-right: 1.5rem;
+  }
+  
+  /* Header styles */
+  h3 {
 	color: var(--dark);
 	font-size: 1rem;
 	font-weight: 400;
 	margin-bottom: 0.5rem;
-}
- 
- 
-h4 {
+  }
+  
+  h4 {
 	color: var(--grey);
 	font-size: 0.875rem;
 	font-weight: 700;
 	margin-bottom: 0.5rem;
-}
- 
- 
-.greeting .title {
+  }
+  
+  .greeting .title {
 	display: flex;
 }
  
@@ -161,30 +165,31 @@ h4 {
 	font-size: 1.5rem;
 	font-weight: 700;
 }
- 
- 
-.create-todo input[type="text"] {
+
+
+  
+  /* Create To-Do section styles */
+  .create-todo input[type="text"] {
 	display: block;
 	width: 100%;
 	font-size: 1.125rem;
 	padding: 1rem 1.5rem;
 	color: var(--dark);
-	background-color: #FFF;
+	background-color: #d6d0d0;
 	border-radius: 0.5rem;
 	box-shadow: var(--shadow);
 	margin-bottom: 1.5rem;
 }
- 
- 
-.create-todo .options {
+  
+  
+  .create-todo .options {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	grid-gap: 1rem;
 	margin-bottom: 1.5rem;
-}
- 
- 
-.create-todo .options label {
+  }
+  
+  .create-todo .options label {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -194,16 +199,14 @@ h4 {
 	border-radius: 0.5rem;
 	box-shadow: var(--shadow);
 	cursor: pointer;
-}
- 
- 
-input[type="radio"],
-input[type="checkbox"] {
+  }
+  
+  input[type="radio"],
+  input[type="checkbox"] {
 	display: none;
-}
- 
- 
-.bubble {
+  }
+  
+  .bubble {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -212,49 +215,42 @@ input[type="checkbox"] {
 	border-radius: 50%;
 	border: 2px solid var(--business);
 	box-shadow: var(--business-glow);
-}
- 
- 
-.bubble.personal {
+  }
+  
+  .bubble.personal {
 	border-color: var(--personal);
 	box-shadow: var(--personal-glow);
-}
- 
- 
-.bubble::after {
+  }
+  
+  .bubble::after {
 	content: "";
 	display: block;
 	opacity: 0;
 	width: 0px;
-	 
 	background-color: var(--business);
 	box-shadow: var(--business-glow);
 	border-radius: 50%;
 	transition: 0.2s ease-in-out;
-}
- 
- 
-.bubble.personal::after {
+  }
+  
+  .bubble.personal::after {
 	background-color: var(--personal);
 	box-shadow: var(--personal-glow);
-}
- 
- 
-input:checked ~ .bubble::after {
+  }
+  
+  input:checked ~ .bubble::after {
 	width: 10px;
 	height: 10px;
 	opacity: 1;
-}
- 
- 
-.create-todo .options label div {
+  }
+  
+  .create-todo .options label div {
 	color: var(--dark);
 	font-size: 1.125rem;
 	margin-top: 1rem;
-}
- 
- 
-.create-todo input[type="submit"] {
+  }
+  
+  .create-todo input[type="submit"] {
 	display: block;
 	width: 100%;
 	font-size: 1.125rem;
@@ -265,20 +261,18 @@ input:checked ~ .bubble::after {
 	box-shadow: var(--personal-glow);
 	cursor: pointer;
 	transition: 0.2s ease-in-out;
-}
- 
- 
-.create-todo input[type="submit"]:hover {
+  }
+  
+  .create-todo input[type="submit"]:hover {
 	opacity: 0.75;
-}
- 
- 
-.todo-list .list {
+  }
+  
+  /* Todo List styles */
+  .todo-list .list {
 	margin: 1rem 0;
-} 
- 
- 
-.todo-list .todo-item {
+  }
+  
+  .todo-list .todo-item {
 	display: flex;
 	align-items: center;
 	background-color: #FFF;
@@ -286,61 +280,51 @@ input:checked ~ .bubble::after {
 	border-radius: 0.5rem;
 	box-shadow: var(--shadow);
 	margin-bottom: 1rem;
-}
- 
- 
-.todo-item label {
+  }
+  
+  .todo-item label {
 	display: block;
 	margin-right: 1rem;
 	cursor: pointer;
-}
- 
- 
-.todo-item .todo-content {
+  }
+  
+  .todo-item .todo-content {
 	flex: 1 1 0%;
-}
- 
- 
-.todo-item .todo-content input {
+  }
+  
+  .todo-item .todo-content input {
 	color: var(--dark);
 	font-size: 1.125rem;
-}
- 
- 
-.todo-item .actions {
+  }
+  
+  .todo-item .actions {
 	display: flex;
 	align-items: center;
-}
- 
- 
-.todo-item .actions button {
+  }
+  
+  .todo-item .actions button {
 	display: block;
 	padding: 0.5rem;
 	border-radius: 0.25rem;
 	color: #FFF;
 	cursor: pointer;
 	transition: 0.2s ease-in-out;
-}
- 
- 
-.todo-item .actions button:hover {
+  }
+  
+  .todo-item .actions button:hover {
 	opacity: 0.75;
-}
- 
- 
-.todo-item .actions .edit {
+  }
+  
+  .todo-item .actions .edit {
 	margin-right: 0.5rem;
 	background-color: var(--primary);
-}
- 
- 
-.todo-item .actions .delete {
+  }
+  
+  .todo-item .actions .delete {
 	background-color: var(--danger);
-}
- 
- 
-.todo-item.done .todo-content input {
+  }
+  
+  .todo-item.done .todo-content input {
 	text-decoration: line-through;
 	color: var(--grey);
-}
-
+  }
